--- a/src/components/Common/Menu.scss
+++ b/src/components/Common/Menu.scss
@@ -4,56 +4,67 @@
   width: 100%;
   position: fixed;
   top: 0;
-}
+  z-index: $z-index-3;
+  background-color: $primary-color;
+  line-height: $spacing;
+  height: $spacing;
 
-nav {
-  background-color: $secondary-color;
-}
+  @media (min-width: $tablet) {
+    line-height: $spacing * 2;
+    height: $spacing * 2;
+  }
 
-ul {
-  display: flex;
-  justify-content: space-around;
+  .menu--desktop {
+    display: none;
 
-  li a {
-    line-height: 100px;
+    @media (min-width: $tablet) {
+      display: block;
+    }
+
+    ul {
+      display: flex;
+      justify-content: space-around;
+
+      li a {
+        text-decoration: none;
+        color: $white;
+        font-size: 1em;
+        cursor: pointer;
+
+        &:hover {
+          color: $black;
+        }
+      }
+    }
+  }
+
+  .menu--mobile {
+    line-height: $spacing;
+    padding-left: $spacing / 4;
+    color: $white;
     display: block;
-    text-decoration: none;
-    color: $tertiary-color;
-    font-size: 1em;
 
-    &:hover {
-      color: $primary-color;
+    @media (min-width: $tablet) {
+      line-height: $spacing * 2;
+      display: none;
+    }
+
+    .menu--mobile-show {
+      position: fixed;
+      text-align: center;
+      box-sizing: border-box;
+      padding: $spacing;
+      z-index: $z-index-4;
+      top: 0;
+      left: 0;
+      background-color: $primary-color;
+      width: 100%;
+      height: 100%;
     }
   }
 }
 
-.hero {
-  display: flex;
-  padding-top: 100px;
-  max-height: 800px;
-  display: flex;
-  justify-content: center;
-  align-items: stretch;
-  flex-flow: row nowrap;
-
-  .hero-inner {
-    max-height: auto;
-    img{
-      width: 100%;
-      height: auto;
-    }
-  }
-
-  .hero-intro {
-    min-width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    img {
-      max-width: 100px;
-      border-radius: 50%;
-    }
-  }
+.footer {
+  margin: $spacing;
+  text-align: center;
 }
