--- a/src/static/style/index.scss
+++ b/src/static/style/index.scss
@@ -1,8 +1,51 @@
 @import '../../../node_modules/reset-css/reset.css';
+@import '../../../node_modules/animate.css/animate.min.css';
 @import 'variables';
 
-body, html{
+body, html {
   background-color: $white;
-  font-size: 20px;
+  font-size: 18px;
   font-family: 'VT323', monospace;
+
+  @media (min-width: $tablet) {
+    font-size: 24px;
+  }
+}
+
+.mainWrapper {
+  margin-top: $spacing;
+
+  @media (min-width: $tablet) {
+    margin-top: $spacing * 2;
+  }
+}
+
+.flex-grid {
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  flex-flow: row nowrap;
+  flex-direction: column;
+
+  @media (min-width: $tablet) {
+    flex-direction: row;
+  }
+}
+
+.flex-grid-reverse {
+  flex-direction: column-reverse;
+
+  @media (min-width: $tablet) {
+    flex-direction: row;
+  }
+}
+
+.flex-grid--title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pull-right{
+  float: right;
 }
