--- a/src/static/style/variables.scss
+++ b/src/static/style/variables.scss
@@ -1,4 +1,16 @@
+$tablet: 600px;
+
+$spacing: 50px;
+
 $white: #fff;
-$primary-color: #284783;
-$secondary-color: #77849C;
-$tertiary-color: #FFFFFF;
+$black: #000;
+$primary-color: #004BA8;
+$secondary-color: #255C99;
+$tertiary-color: #337ACA;
+$forth-color: #4A525A;
+
+// z index's
+$z-index-4: 4;
+$z-index-3: 3;
+$z-index-2: 2;
+$z-index-1: 1;
