Adding favicon and fix styles

--- a/src/static/style/index.scss
+++ b/src/static/style/index.scss
@@ -44,6 +44,8 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: $white;
+  font-size: 1.2em;
 }
 
 .pull-right{
